--- a/#src/components/header.html
+++ b/#src/components/header.html
@@ -1,3 +1,35 @@
 <header class="header">
+    <div class="container header-container">
+        <div class="header-logo">
+            <a href="#">
+                <img src="../img/logo.svg" alt="logo">
+            </a>
+        </div>
 
+        <button type="button" class="burger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
+
+        <nav class="header-navbar">
+            <ul class="header-navbar__list">
+                <li class="header-navbar__item active">
+                    <a href="#" class="header-navbar__link">Stari</a>
+                </li>
+                <li class="header-navbar__item">
+                    <a href="#" class="header-navbar__link">Recomandări</a>
+                </li>
+                <li class="header-navbar__item">
+                    <a href="#" class="header-navbar__link">Specialiști</a>
+                </li>
+                <li class="header-navbar__item">
+                    <a href="#" class="header-navbar__link">Istorii</a>
+                </li>
+                <li class="header-navbar__item">
+                    <a href="#" class="header-navbar__link">Resurse</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
 </header>
