--- a/#src/scss/default.scss
+++ b/#src/scss/default.scss
@@ -16,7 +16,8 @@ $mw: 1340;
 $md1: $mw + 12;
 $md2: 992.98;
 $md3: 767.98;
-$md4: 479.98;
+$md4: 640.98;
+$md5: 479.98;
 // CONTAINER
 
 // Global Commands
@@ -51,6 +52,21 @@ body {
     }
     @media (max-width: $md2+px) {
         max-width: 750px;
+    }
+    @media (max-width: $md3+px) {
+        max-width: none;
+        padding: 0 10px;
+    }
+}
+.swiper-container {
+    max-width: 1240px;
+    margin: 0 auto;
+    width: 100%;
+    @media (max-width: $md1+px) {
+        max-width: 860px;
+    }
+    @media (max-width: $md2+px) {
+        max-width: 640px;
     }
     @media (max-width: $md3+px) {
         max-width: none;
