--- a/#src/scss/fonts.scss
+++ b/#src/scss/fonts.scss
@@ -1,5 +1,5 @@
 @include font('Poppins', 'Poppins-Regular', '400', 'normal');
 @include font('Poppins', 'Poppins-Medium', '500', 'normal');
-@include font('Poppins', 'Poppins', '600', 'normal');
+@include font('Poppins', 'Poppins-Semibold', '600', 'normal');
 @include font('Poppins', 'Poppins-Bold', '700', 'normal');
 @include font('Bogart', 'Bogart-Bold-trial', '700', 'normal');
