--- a/#src/components/footer.html
+++ b/#src/components/footer.html
@@ -1,3 +1,43 @@
-<footer class="footer">
+<footer class="footer" style="background: url('img/footer.svg') 50% 50% / cover no-repeat;">
+    <div class="container footer-container">
+        <div class="footer-body">   
+            <div class="footer-body__content footer-content">
+                <h2 class="footer-content__title">Găsește un specialist aproape de tine:</h2>
+                <form action="#" class="footer-content__search search-form">
+                    <div class="input-block">
+                        <span class="icon-search"></span>
+                        <input class="search-input" type="text" placeholder="Scie sau alege raionul/orasul tau">
+                        <span class="icon-chevron"></span>
+                        <ul class="search-value__list">
+                            <li>Chisinau</li>
+                            <li>Hancesti</li>
+                            <li>Balti</li>
+                            <li>Edinet</li>
+                            <li>Orhei</li>
+                            <li>Cimislia</li>
+                            <li>Ocnita</li>
+                            <li>Singerei</li>
+                            <li>Ialoveni</li>
+                            <li>Durlesti</li>
+                            <li>Bardar</li>
+                            <li>Vadul lui voda</li>
+                        </ul>
+                    </div>
+                    <button class="btn-accent search-submit" type="submit">Cauta</button>
+                </form>
+            </div>
 
+            <div class="footer-body__mascota">
+                <img src="../img/mascota-footer.svg" alt="mascota">
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <small>© 2021 cumsemtiazi. All rights reserved</small>
+            <div class="footer-socials">
+                <a href="#" class="icon-instagram"></a>
+                <a href="#" class="icon-facebook"></a>
+                <a href="#" class="icon-youtube"></a>
+            </div>
+        </div>
+    </div>
 </footer>
