--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -6,8 +6,11 @@
 @import 'media';
 
 @import 'home';
+@import 'specialisti';
+@import 'specialisti-single';
 
 @import './components/header.scss';
 @import './components/footer.scss';
 @import './components/stateSlider.scss';
 @import './components/videoSlider.scss';
+@import './components/pageTitle.scss';
