--- a/#src/components/header.html
+++ b/#src/components/header.html
@@ -1,7 +1,7 @@
 <header class="header">
     <div class="container header-container">
         <div class="header-logo">
-            <a href="#">
+            <a href="/">
                 <img src="../img/logo.svg" alt="logo">
             </a>
         </div>
@@ -21,7 +21,7 @@
                     <a href="#" class="header-navbar__link">Recomandări</a>
                 </li>
                 <li class="header-navbar__item">
-                    <a href="#" class="header-navbar__link">Specialiști</a>
+                    <a href="../specialisti.html" class="header-navbar__link">Specialiști</a>
                 </li>
                 <li class="header-navbar__item">
                     <a href="#" class="header-navbar__link">Istorii</a>
