--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -25,75 +25,6 @@
         h4 {
             margin-bottom: 25px;
         }
-        .search-form {
-            display: flex;
-            align-items: center;
-            gap: 30px;
-            .input-block {
-                display: flex;
-                align-items: center;
-                position: relative;
-                padding: 0 20px;
-                border-radius: 100px;
-                background-color: #fff;
-                border: 1px solid #ccdedb;
-                flex: 1;
-                .icon-search {
-                    font-size: 24px;
-                }
-                .icon-chevron {
-                    transition: transform 0.3s;
-                    font-size: 20px;
-                }
-                .search-input {
-                    border: none;
-                    padding-left: 10px;
-                    padding-right: 10px;
-                    &:focus + .icon-chevron {
-                        transform: rotate(180deg);
-                    }
-                }
-                .search-value__list {
-                    position: absolute;
-                    top: 115%;
-                    left: 0;
-                    width: 100%;
-                    box-shadow: 0px 5px 8px 0px rgba(0, 0, 0, 0.2);
-                    overflow: hidden;
-                    max-height: 0;
-                    transition: 0.3s ease-in-out;
-                    border-radius: 20px;
-                    &.open {
-                        max-height: 250px;
-                        overflow: auto;
-                    }
-                    li {
-                        position: relative;
-                        background-color: #fafcfd;
-                        padding: 20px;
-                        display: flex;
-                        align-items: center;
-                        cursor: pointer;
-                        transition: background-color 0.3s;
-                        opacity: 1;
-                        &:hover {
-                            background-color: $accentcolor;
-                            color: #fff;
-                        }
-                        &.closed {
-                            opacity: 0;
-                            padding: 0;
-                            max-height: 0;
-                            overflow: hidden;
-                            transform: scaleY(0);
-                        }
-                    }
-                }
-            }
-            .search-submit {
-                width: 200px;
-            }
-        }
         .hero-search__meta {
             margin-top: 30px;
             display: flex;
@@ -198,6 +129,9 @@
     @media (max-width: $md2+px) {
         padding: 130px 0;
     }
+    @media (max-width: $md3+px) {
+        background: #e7f2f0 !important;
+    }
     &__container {
         display: flex;
         align-items: center;
@@ -268,12 +202,6 @@
                             align-items: center;
                             gap: 30px;
                             margin-left: 4px;
-                            // .slider-arrow {
-                            //     &__prev {
-                            //     }
-                            //     &__next {
-                            //     }
-                            // }
                         }
                         &__more {
                             width: 200px;
@@ -291,6 +219,181 @@
             max-width: 650px;
             width: 100%;
             height: auto;
+        }
+    }
+}
+
+.story-section {
+    position: relative;
+    z-index: 3;
+    transform: translateY(-55px);
+    margin-bottom: -55px;
+    padding: 175px 0;
+    &__container {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 30px;
+    }
+    &__illustration {
+        img {
+            max-width: 650px;
+            width: 100%;
+            height: auto;
+        }
+    }
+    &__content {
+        max-width: 420px;
+        .mobile-illustration {
+            margin-top: 30px;
+            img {
+                max-width: 100%;
+            }
+            @media (min-width: $md3+px) {
+                display: none;
+            }
+        }
+    }
+    &__navigation {
+        display: flex;
+        align-items: center;
+        margin-top: 52px;
+        gap: 20px;
+    }
+}
+
+.resurces-section {
+    position: relative;
+    z-index: 2;
+    transform: translateY(-40px);
+    margin-bottom: -40px;
+    padding: 175px 0;
+    @media (max-width: $md3+px) {
+        background: #e7f2f0 !important;
+        padding: 100px 0;
+    }
+    @media (max-width: $md5+px) {
+        padding: 50px 0;
+    }
+    .section-header {
+        text-align: center;
+        margin-bottom: 50px;
+    }
+    .page__resurces-slider {
+        .resurces-slider__body {
+            .resurces-slider__slider {
+                .slider-resurces-controls {
+                    margin-bottom: 30px;
+                    &__arrows {
+                        display: flex;
+                        align-items: center;
+                        justify-content: flex-end;
+                        gap: 30px;
+                        @media (max-width: $md4+px) {
+                            display: none;
+                        }
+                    }
+                }
+                .slider-resurces__body {
+                    .slider-resurces__slide {
+                        display: flex;
+                        align-items: center;
+                        background-color: #fff;
+                        border-radius: 20px;
+                        @media (max-width: $md4+px) {
+                            flex-direction: column;
+                            max-width: 250px;
+                        }
+                        img {
+                            border-top-left-radius: 20px;
+                            border-bottom-left-radius: 20px;
+                            height: 100%;
+                            object-fit: cover;
+                            @media (max-width: $md4+px) {
+                                width: 100%;
+                                border-top-left-radius: 20px;
+                                border-top-right-radius: 20px;
+                                border-bottom-left-radius: 0;
+                            }
+                        }
+
+                        .resurce-slide__content {
+                            padding: 30px;
+                            @media (max-width: $md4+px) {
+                                padding: 20px;
+                            }
+                            h5 {
+                                margin-bottom: 10px;
+                            }
+                            p {
+                                font-size: 14px;
+                                line-height: 214%;
+                                color: #67766d;
+                                margin-bottom: 38px;
+                            }
+                            a {
+                                font-weight: 500;
+                                color: $accentcolor;
+                                text-decoration: underline;
+                                transition: color 0.3s;
+                                &:hover {
+                                    color: $limecolor;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+.about-section {
+    position: relative;
+    z-index: 1;
+    transform: translateY(-45px);
+    margin-bottom: -45px;
+    padding: 165px 0;
+    &__container {
+        display: flex;
+        align-items: center;
+        gap: 40px;
+    }
+    &__mascota {
+        img {
+            max-width: 650px;
+            width: 100%;
+            height: auto;
+        }
+    }
+    &__content {
+        max-width: 625px;
+        @media (max-width: $md1+px) {
+            max-width: 450px;
+        }
+        .mascota-mobile {
+            display: none;
+        }
+        .minister {
+            margin-top: 40px;
+        }
+        .campany-promoters {
+            margin-top: 25px;
+            h6 {
+                margin-bottom: 20px;
+            }
+            .campany-promoters__logo {
+                display: flex;
+                align-items: center;
+                gap: 30px;
+                flex-wrap: wrap;
+                img {
+                    &:not(:last-child) {
+                        padding-right: 30px;
+                        border-right: 1px solid #ccdedb;
+                    }
+                }
+            }
         }
     }
 }
