--- a/#src/scss/ui.scss
+++ b/#src/scss/ui.scss
@@ -26,6 +26,7 @@ h5 {
     font-weight: 600;
     font-size: 22px;
     color: $darkgreen;
+    @include adaptiv-value('font-size', 22, 16, 1);
 }
 h6 {
     font-weight: 600;
@@ -97,6 +98,7 @@ form button {
     background-color: $accentcolor;
     border-radius: 100px;
     transition: background-color 0.3s;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
     &:hover {
         background-color: lighten($accentcolor, 4);
     }
@@ -142,6 +144,9 @@ form button {
     p {
         color: $graycolor;
         line-height: 194%;
+        &:not(:last-child) {
+            @include adaptiv-value('margin-bottom', 20, 10, 1);
+        }
     }
 }
 
@@ -154,5 +159,78 @@ form button {
         &-active {
             background: #49745b;
         }
+    }
+}
+
+.search-form {
+    display: flex;
+    align-items: center;
+    position: relative;
+    z-index: 1000;
+    gap: 30px;
+    .input-block {
+        display: flex;
+        align-items: center;
+        position: relative;
+        padding: 0 20px;
+        border-radius: 100px;
+        background-color: #fff;
+        border: 1px solid #ccdedb;
+        flex: 1;
+        .icon-search {
+            font-size: 24px;
+        }
+        .icon-chevron {
+            transition: transform 0.3s;
+            font-size: 20px;
+        }
+        .search-input {
+            border: none;
+            padding-left: 10px;
+            padding-right: 10px;
+            &:focus + .icon-chevron {
+                transform: rotate(180deg);
+            }
+        }
+        .search-value__list {
+            position: absolute;
+            top: 115%;
+            left: 0;
+            width: 100%;
+            box-shadow: 0px 5px 8px 0px rgba(0, 0, 0, 0.2);
+            overflow: hidden;
+            max-height: 0;
+            transition: 0.3s ease-in-out;
+            border-radius: 20px;
+            &.open {
+                max-height: 250px;
+                overflow: auto;
+            }
+            li {
+                position: relative;
+                background-color: #fafcfd;
+                padding: 20px;
+                display: flex;
+                align-items: center;
+                cursor: pointer;
+                transition: background-color 0.3s;
+                opacity: 1;
+                &:hover {
+                    background-color: $accentcolor;
+                    color: #fff;
+                }
+                &.closed {
+                    opacity: 0;
+                    padding: 0;
+                    max-height: 0;
+                    display: none;
+                    overflow: hidden;
+                    transform: scaleY(0);
+                }
+            }
+        }
+    }
+    .search-submit {
+        width: 200px;
     }
 }
