--- a/#src/components/header.html
+++ b/#src/components/header.html
@@ -15,10 +15,10 @@
         <nav class="header-navbar">
             <ul class="header-navbar__list">
                 <li class="header-navbar__item active">
-                    <a href="#" class="header-navbar__link">Stari</a>
+                    <a href="../stari.html" class="header-navbar__link">Stari</a>
                 </li>
                 <li class="header-navbar__item">
-                    <a href="#" class="header-navbar__link">Recomandări</a>
+                    <a href="../recomandation.html" class="header-navbar__link">Recomandări</a>
                 </li>
                 <li class="header-navbar__item">
                     <a href="../specialisti.html" class="header-navbar__link">Specialiști</a>
