--- a/#src/scss/components/pageTitle.scss
+++ b/#src/scss/components/pageTitle.scss
@@ -1,11 +1,13 @@
 .page-title {
     width: 100%;
     height: 600px;
+    z-index: 2;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     text-align: center;
+    position: relative;
     @media (max-width: $md3+px) {
         background: #e7f2f0 !important;
         height: 560px;
